--- a/index.html
+++ b/index.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="bread_favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- general sharing meta tags -->
+    <meta property="og:image" content="breadlogo.png" />
+    <meta property="og:image:height" content="286" />
+    <meta property="og:image:width" content="666" />
+    <meta name="twitter:image:alt" content="breadchain logo" />
+
+    <!-- twitter specific tags -->
+    <meta name="twitter:card" content="app" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@breadchain_" />
+
+    <!-- possibly redundant as page has title/meta description tags anyway -->
+    <!-- <meta property="og:title" content="XXXX" /> -->
+    <!-- <meta property="og:description" content="XXXX"/> -->
+    <!-- possibly redundant as fb/twitter will pick up url -->
+    <!-- <meta property="og:url" content="https://app.breadchain.xyz" /> -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Text&display=swap"
+      rel="stylesheet"
+    />
     <title>BREADCHAIN CROWDSTAKING</title>
   </head>
   <body>
