--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="bread_favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta name="description" content="Community Bakery." />
+    <meta name="title" content="BREADCHAIN CROWDSTAKING" />
+
     <!-- general sharing meta tags -->
-    <meta property="og:image" content="breadlogo.png" />
+    <meta property="og:image" content="/breadlogo.png" />
     <meta property="og:image:height" content="286" />
     <meta property="og:image:width" content="666" />
     <meta name="twitter:image:alt" content="breadchain logo" />
