update meta tags

--- a/index.html
+++ b/index.html
@@ -5,25 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="bread_favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Community Bakery." />
+    <meta name="description" content="Bake and Burn BREAD" />
     <meta name="title" content="BREADCHAIN CROWDSTAKING" />
 
-    <!-- general sharing meta tags -->
+    <meta property="og:url" content="https://app.breadchain.xyz" />
     <meta property="og:image" content="/breadlogo.png" />
     <meta property="og:image:height" content="286" />
     <meta property="og:image:width" content="666" />
-    <meta name="twitter:image:alt" content="breadchain logo" />
 
-    <!-- twitter specific tags -->
     <meta name="twitter:card" content="app" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@breadchain_" />
-
-    <!-- possibly redundant as page has title/meta description tags anyway -->
-    <!-- <meta property="og:title" content="XXXX" /> -->
-    <!-- <meta property="og:description" content="XXXX"/> -->
-    <!-- possibly redundant as fb/twitter will pick up url -->
-    <!-- <meta property="og:url" content="https://app.breadchain.xyz" /> -->
+    <meta name="twitter:image:alt" content="breadchain logo" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
